keycloak/10-keycloak-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
    type: statefulset
spec:
  serviceName: "keycloak"
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
      type: pod 
  template:
    metadata:
      labels:
        app: keycloak
        type: pod
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
