keycloak/11-keycloak-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
spec:
  tls:
  - hosts:
      - "keycloak.domain.tld"
    secretName: "keycloak-tls"
  rules:
  - host: "keycloak.domain.tld"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "keycloak"
            port:
              number: 8080
